--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "electron": "^31.0.0",
-    "typescript": "^5.5.0",
-    "vite": "^5.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@tailwindcss/postcss": "^4.1.0",
-    "postcss": "^8.4.0"
+    "@vitejs/plugin-react": "^4.3.0",
+    "electron": "^31.0.0",
+    "postcss": "^8.4.0",
+    "typescript": "^5.5.0",
+    "vite": "^5.3.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.12"
